tests/type/errors/bad_length2.xi
foo() {
    x:int = length(true)
}